// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/image/demo/basic.vue correctly 1`] = `
<div class="ant-image" style="width: 200px;"><img class="ant-image-img" src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png">
  <!---->
  <!---->
</div>
`;

exports[`renders ./components/image/demo/controlled-preview.vue correctly 1`] = `
<div><button class="ant-btn ant-btn-primary" type="button">
    <!----><span>show image preview</span>
  </button>
  <div class="ant-image" style="width: 200px;"><img class="ant-image-img" style="display: none;" src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png">
    <!---->
    <!---->
  </div>
  <!---->
</div>
`;

exports[`renders ./components/image/demo/fallback.vue correctly 1`] = `
<div class="ant-image" style="width: 200px; height: 200px;"><img class="ant-image-img" src="https://www.antdv.com/#error">
  <!---->
  <!---->
</div>
`;

exports[`renders ./components/image/demo/placeholder.vue correctly 1`] = `
<div class="ant-space ant-space-horizontal ant-space-align-center">
  <div class="ant-space-item" style="margin-right: 12px;">
    <div class="ant-image" style="width: 200px;"><img class="ant-image-img" src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png?undefined">
      <div aria-hidden="true" class="ant-image-placeholder">
        <div class="ant-image" style="width: 200px;"><img class="ant-image-img" src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png?x-oss-process=image/blur,r_50,s_50/quality,q_1/resize,m_mfit,h_200,w_200">
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
  </div>
  <!---->
  <div class="ant-space-item"><button class="ant-btn ant-btn-primary" type="button">
      <!----><span>reload</span>
    </button></div>
  <!---->
</div>
`;

exports[`renders ./components/image/demo/preview-group.vue correctly 1`] = `
<div class="ant-image" style="width: 200px;"><img class="ant-image-img" src="https://aliyuncdn.antdv.com/vue.png">
  <!---->
  <!---->
</div>
<div class="ant-image" style="width: 200px;"><img class="ant-image-img" src="https://aliyuncdn.antdv.com/logo.png">
  <!---->
  <!---->
</div>
`;

exports[`renders ./components/image/demo/preview-group-visible.vue correctly 1`] = `
<div class="ant-image" style="width: 200px;"><img class="ant-image-img" src="https://gw.alipayobjects.com/zos/antfincdn/LlvErxo8H9/photo-1503185912284-5271ff81b9a8.webp">
  <!---->
  <!---->
</div>
<div style="display: none;">
  <div class="ant-image"><img class="ant-image-img" src="https://gw.alipayobjects.com/zos/antfincdn/LlvErxo8H9/photo-1503185912284-5271ff81b9a8.webp">
    <!---->
    <!---->
  </div>
  <!---->
  <div class="ant-image"><img class="ant-image-img" src="https://gw.alipayobjects.com/zos/antfincdn/cV16ZqzMjW/photo-1473091540282-9b846e7965e3.webp">
    <!---->
    <!---->
  </div>
  <!---->
  <div class="ant-image"><img class="ant-image-img" src="https://gw.alipayobjects.com/zos/antfincdn/x43I27A55%26/photo-1438109491414-7198515b166b.webp">
    <!---->
    <!---->
  </div>
  <!---->
  <!---->
</div>
`;
